@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.10120 2011/02/17 22:10:46 wiz Exp $
+$NetBSD: TODO,v 1.10121 2011/02/18 23:56:48 shattered Exp $
 
 Suggested new packages
 ======================
@@ -347,7 +347,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o XaoS-3.5
 	o YoSucker-81
 	o ZIPIdent-2.9
-	o abook-0.6.0pre2 [pkg/42672]
 	o accerciser-1.12.2 [GNOME 2.32]
 	o acme-091
 	o acr-0.5.2
